--- a/src/app/Pages/home/home.html
+++ b/src/app/Pages/home/home.html
@@ -3,7 +3,7 @@
     <div class="container p-md-5 p-3 rounded team-container">
         <div class=" row g-3 g-lg-4">
             <div class="col-12 col-lg-6 pb-3 pe-lg-4">
-                <div>
+                <div class="d-flex flex-column justify-content-between h-100">
                     <h1 class="mb-0">4TH, OCT</h1>
                     <h4>Hello, Youssef</h4>
                     <div class="flex-wrap pt-4 pb-2 rounded d-flex blue ps-md-0 ps-2 ">
