--- a/src/app/Layout/navbar/navbar.html
+++ b/src/app/Layout/navbar/navbar.html
@@ -20,19 +20,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="gap-xxl-5 gap-lg-4 navbar-nav mx-auto pe-lg-5 text-center">
             <li class="nav-item">
-              <a class="nav-link active" routerLink="/team">THE TEAM</a>
+              <a class="nav-link " routerLink="/home" routerLinkActive="active">THE TEAM</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" routerLink="/clients">CLIENTS</a>
+              <a class="nav-link" routerLink="/clients" routerLinkActive="active">CLIENTS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" routerLink="/signup">SIGNUP</a>
+              <a class="nav-link" routerLink="/signup" routerLinkActive="active">SIGNUP</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" routerLink="/feedback">FEEDBACK</a>
+              <a class="nav-link" routerLink="/feedback" routerLinkActive="active">FEEDBACK</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" routerLink="/notifications">NOTIFICATIONS</a>
+              <a class="nav-link" routerLink="/notifications" routerLinkActive="active">NOTIFICATIONS</a>
             </li>
             <li class="nav-item pe-xl-5 me-xl-3">
               <a class="nav-link pe-lg-5" routerLink="/create-account">CREATE ACCOUNT</a>
