--- a/src/app/Pages/client-profile/client-profile.html
+++ b/src/app/Pages/client-profile/client-profile.html
@@ -1,1 +1,83 @@
-<p>client-profile works!</p>
+         <div class="pt-5 pb-5 logo text-start"><img class="" src="assets/img/logo.svg" alt=""></div>
+        <h1 class="mt-5 text-white text-end big">PROFILE</h1>
+    <div class="text-white client-profile p-md-5 p-3">
+        <div class="d-flex justify-content-end">
+                <h3 class="term pt-md-3 pt-2 pb-1 mb-3 rounded-3" >LONG TERM</h3>
+        </div>
+         <div class="d-flex">
+            <div><img src="assets/img/gafla-3.svg" alt=""></div>
+                <div class="ms-xl-5 ms-md-4 ms-3">
+                    <h5 class="mb-md-2 mb-1">ABOUT GAFLA </h5>
+                    <p class="low small lh-1 mb-lg-4 pb--md-2" style="white-space: pre-line;">The design was great maybe the quality of the presentation could be much
+                         better, thank you so much,The design was great maybe the quality of the
+                          presentation could be much better, thank you so much</p>
+                    <h5 class="mb-0">SERVICES</h5>
+                    <p class="low small mb-lg-4 mb-md-2 mb-1 pb-md-2">Social Media </p>
+                    <h5 class="mb-0">LOCATION</h5>
+                    <p class="low small mb-0">EGYPT</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col text-start mt-4">
+                    <h3 class="fw-bold mb-0">GAFLA</h3>
+                    <p>JEWELRY BRAND </p>
+                </div>
+                <div class="col text-end mt-4">
+                    <p class="low small mb-0">+996 432 2847 22</p>
+                    <a href="" class="low small text-decoration-none text-white">WWW.GAFLA.COM</a>
+                </div>
+            </div>
+                <div class="mx-0 g-5 row">
+                    <div class="col-lg-6 ps-2 pe-3  ms-1 ms-lg-0">
+                            <div class="d-flex row left-box rounded-3 p-4">
+                                <div class="col px-0">
+                                    <h6 class="low">ASSIGEND TO :</h6>
+                                    <h4 class="mb-0">YOUSSEF - AYMAN</h4>
+                                    <h4>AHMED</h4>
+                                </div>
+                                <div class="col px-0">
+                                    <div class="d-flex justify-content-end mt-2">
+                                        <div><img class="me-2" src="assets/img/Mask group (3).svg" alt=""></div>
+                                        <div><img src="assets/img/Mask group (3).svg" alt=""></div>
+                                    </div>
+                                </div>
+                                <div class="d-flex rounded-3 px-0">
+                                    <div class="col ps-0 mt-auto ">
+                                        <p class="small mb-0">4TH, OCT</p>
+                                    </div>
+                                    <div class="col pe-0">
+                                        <div class="d-flex justify-content-end mt-2">
+                                            <div><img src="assets/img/Mask group (3).svg" alt=""></div>
+                                        </div>
+                                    </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 ps-lg-3 ps-0 pe-0">
+                        <div class=" right-box h-100 rounded-3 p-4 ">
+                            <div class="row ps-0 pe-3 ms-0">
+                                <div class="col-lg col-8 px-0 pe-0">
+                                    <h6 class="">GAFLA - SOCIAL MEDIA</h6>
+                                    <p class="low small mb-0" style="white-space: pre-line;">“The design was great maybe the quality of
+                                        the presentation could be much better,
+                                        thank you so much”</p>
+                                </div>
+                                <div class="col-lg-4 col-4 text-end px-0">
+                                    <h1 class="mb-0">PSR</h1>
+                                    <p class="small mb-0">PROJECT SUCCESS RATE</p>
+                                </div>
+                            </div>
+                            <div class="row px-0">
+                                <div class="col mt-auto margin">
+                                    <h6 class="">14, OCT 24</h6>
+                                    <img src="assets/img/4blue-star.png" alt="">
+                                </div>
+                                <div class="col text-end h1-span">
+                                    <p>87%</p>
+                                </div>
+                            </div>
+                    </div>
+                    
+                </div>
+        </div>
+    </div>
