Updates layout and routing configurations.
Modifies HTML and TypeScript files to update layout components and routing configurations. Adjusts background images, imports, and router links. Adds new components and updates routes for improved navigation and user experience.

--- a/src/app/Layout/mainlayout-non-nav/mainlayout-non-nav.html
+++ b/src/app/Layout/mainlayout-non-nav/mainlayout-non-nav.html
@@ -1,6 +1,8 @@
-        <div class="container px-lg-0 px-3 pb-5" style="background-image: url('assets/img/bg.svg'); background-repeat: no-repeat;
+<div class="container px-lg-0 px-3 pb-5" style="background-image: url('assets/img/bg.svg'); background-repeat: no-repeat;
         background-position-x: 50%;">
-        
+        <div class="pb-5 pt-5 logo text-start" routerLink="/">
+                <img class="" src="assets/img/logo.svg" alt="">
+        </div>
         <<router-outlet></router-outlet>
-         <app-footer/>
-    </div>
+                <app-footer />
+</div>
