--- a/src/app/Layout/navbar/navbar.html
+++ b/src/app/Layout/navbar/navbar.html
@@ -35,7 +35,7 @@
               <a class="nav-link" routerLink="/notifications" routerLinkActive="active">NOTIFICATIONS</a>
             </li>
             <li class="nav-item pe-xl-5 me-xl-3">
-              <a class="nav-link pe-lg-5" routerLink="/create-account">CREATE ACCOUNT</a>
+              <a class="nav-link pe-lg-5" routerLink="/createaccount">CREATE ACCOUNT</a>
             </li>
           </ul>
         </div>
