--- a/src/app/Pages/client-profile/client-profile.html
+++ b/src/app/Pages/client-profile/client-profile.html
@@ -1,5 +1,4 @@
-         <div class="pt-5 pb-5 logo text-start"><img class="" src="assets/img/logo.svg" alt=""></div>
-        <h1 class="mt-5 text-white text-end big">PROFILE</h1>
+        <h1 class="mt-5 text-white text-end big">CLIENT PROFILE</h1>
     <div class="text-white client-profile p-md-5 p-3">
         <div class="d-flex justify-content-end">
                 <h3 class="term pt-md-3 pt-2 pb-1 mb-3 rounded-3" >LONG TERM</h3>
@@ -81,3 +80,6 @@
                 </div>
         </div>
     </div>
+
+    <app-project-client/>    
+    <app-feedback-client/>
